src/generated-sources/antlr4/CPUSim64Parser.java
// Generated from CPUSim64.g4 by ANTLR 4.13.2
package cloud.lesh.CPUSim64;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CPUSim64Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, NOP=6, DEBUG=7, CLEAR=8, MOVE=9, 
		LOAD=10, STORE=11, POP=12, PUSH=13, JUMP=14, CALL=15, RETURN=16, INTERRUPT=17, 
		STOP=18, NEG=19, ADD=20, SUB=21, MULT=22, DIV=23, RECIP=24, COMPL=25, 
		AND=26, OR=27, XOR=28, TEST=29, CMP=30, LSHIFT=31, RSHIFT=32, ARSHIFT=33, 
		LROTATE=34, RROTATE=35, IN=36, OUT=37, PACK=38, PACK64=39, UNPACK=40, 
		UNPACK64=41, CAS=42, ENDIAN=43, SAVE=44, RESTORE=45, READONLY=46, REG_R=47, 
		REG_F=48, SF=49, SP=50, PC=51, SR=52, U=53, Z=54, NZ=55, EQ=56, NE=57, 
		N=58, LT=59, P=60, GT=61, NN=62, GE=63, NP=64, LE=65, O=66, NO=67, PE=68, 
		PO=69, HEXLIT=70, INTLIT=71, FLOATLIT=72, CHARLIT=73, STRINGLIT=74, FILENAMELIT=75, 
		IDENT=76, DCI=77, DCF=78, DCA=79, DCB=80, DCC=81, DCW=82, DCS=83, ORG=84, 
		LINE=85, LINE_BEGIN=86, LINE_END=87, BLOCK_BEGIN=88, BLOCK_END=89, BLOCK_COMMENT=90, 
		LINE_COMMENT=91, WS=92, NL=93;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_labelDef = 2, RULE_directive = 3, 
		RULE_dataDirective = 4, RULE_intList = 5, RULE_floatList = 6, RULE_charList = 7, 
		RULE_byteList = 8, RULE_instruction = 9, RULE_instrNOP = 10, RULE_instrDEBUG = 11, 
		RULE_instrCLEAR = 12, RULE_instrMOVE = 13, RULE_instrLOAD = 14, RULE_instrSTORE = 15, 
		RULE_instrPOP = 16, RULE_instrPUSH = 17, RULE_branchModes = 18, RULE_instrJUMP = 19, 
		RULE_instrCALL = 20, RULE_instrRETURN = 21, RULE_instrINTERRUPT = 22, 
		RULE_instrSTOP = 23, RULE_instrNEG = 24, RULE_arithmeticModes = 25, RULE_instrADD = 26, 
		RULE_instrSUB = 27, RULE_instrMULT = 28, RULE_instrDIV = 29, RULE_instrRECIP = 30, 
		RULE_instrCOMPL = 31, RULE_logicModes = 32, RULE_instrAND = 33, RULE_instrOR = 34, 
		RULE_instrXOR = 35, RULE_instrTEST = 36, RULE_instrCMP = 37, RULE_instrLSHIFT = 38, 
		RULE_instrRSHIFT = 39, RULE_instrARSHIFT = 40, RULE_instrLROTATE = 41, 
		RULE_instrRROTATE = 42, RULE_instrIN = 43, RULE_instrOUT = 44, RULE_instrPACK = 45, 
		RULE_instrPACK64 = 46, RULE_instrUNPACK = 47, RULE_instrUNPACK64 = 48, 
		RULE_instrCAS = 49, RULE_instrENDIAN = 50, RULE_instrSAVE = 51, RULE_instrRESTORE = 52, 
		RULE_instrREADONLY = 53, RULE_operand = 54, RULE_rOperand = 55, RULE_fOperand = 56, 
		RULE_aOperand = 57, RULE_xOperand = 58, RULE_yOperand = 59, RULE_oOperand = 60, 
		RULE_pOperand = 61, RULE_qOperand = 62, RULE_x1to4 = 63, RULE_y1to4 = 64, 
		RULE_bLiteral = 65, RULE_aLiteral = 66, RULE_cLiteral = 67, RULE_kLiteral = 68, 
		RULE_eLiteral = 69, RULE_pLiteral = 70, RULE_zPort = 71, RULE_zCond = 72, 
		RULE_memRef = 73;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "labelDef", "directive", "dataDirective", "intList", 
			"floatList", "charList", "byteList", "instruction", "instrNOP", "instrDEBUG", 
			"instrCLEAR", "instrMOVE", "instrLOAD", "instrSTORE", "instrPOP", "instrPUSH", 
			"branchModes", "instrJUMP", "instrCALL", "instrRETURN", "instrINTERRUPT", 
			"instrSTOP", "instrNEG", "arithmeticModes", "instrADD", "instrSUB", "instrMULT", 
			"instrDIV", "instrRECIP", "instrCOMPL", "logicModes", "instrAND", "instrOR", 
			"instrXOR", "instrTEST", "instrCMP", "instrLSHIFT", "instrRSHIFT", "instrARSHIFT", 
			"instrLROTATE", "instrRROTATE", "instrIN", "instrOUT", "instrPACK", "instrPACK64", 
			"instrUNPACK", "instrUNPACK64", "instrCAS", "instrENDIAN", "instrSAVE", 
			"instrRESTORE", "instrREADONLY", "operand", "rOperand", "fOperand", "aOperand", 
			"xOperand", "yOperand", "oOperand", "pOperand", "qOperand", "x1to4", 
			"y1to4", "bLiteral", "aLiteral", "cLiteral", "kLiteral", "eLiteral", 
			"pLiteral", "zPort", "zCond", "memRef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'+'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "NOP", "DEBUG", "CLEAR", "MOVE", 
			"LOAD", "STORE", "POP", "PUSH", "JUMP", "CALL", "RETURN", "INTERRUPT", 
			"STOP", "NEG", "ADD", "SUB", "MULT", "DIV", "RECIP", "COMPL", "AND", 
			"OR", "XOR", "TEST", "CMP", "LSHIFT", "RSHIFT", "ARSHIFT", "LROTATE", 
			"RROTATE", "IN", "OUT", "PACK", "PACK64", "UNPACK", "UNPACK64", "CAS", 
			"ENDIAN", "SAVE", "RESTORE", "READONLY", "REG_R", "REG_F", "SF", "SP", 
			"PC", "SR", "U", "Z", "NZ", "EQ", "NE", "N", "LT", "P", "GT", "NN", "GE", 
			"NP", "LE", "O", "NO", "PE", "PO", "HEXLIT", "INTLIT", "FLOATLIT", "CHARLIT", 
			"STRINGLIT", "FILENAMELIT", "IDENT", "DCI", "DCF", "DCA", "DCB", "DCC", 
			"DCW", "DCS", "ORG", "LINE", "LINE_BEGIN", "LINE_END", "BLOCK_BEGIN", 
			"BLOCK_END", "BLOCK_COMMENT", "LINE_COMMENT", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CPUSim64.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CPUSim64Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CPUSim64Parser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPUSim64Visitor ) return ((CPUSim64Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140737488355264L) != 0) || ((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & 147455L) != 0)) {
				{
				{
				setState(148);
				line();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(CPUSim64Parser.NL, 0); }
		public LabelDefContext labelDef() {
			return getRuleContext(LabelDefContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPUSim64Visitor ) return ((CPUSim64Visitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(156);
				labelDef();
				}
			}

			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOP:
			case DEBUG:
			case CLEAR:
			case MOVE:
			case LOAD:
			case STORE:
			case POP:
			case PUSH:
			case JUMP:
			case CALL:
			case RETURN:
			case INTERRUPT:
			case STOP:
			case NEG:
			case ADD:
			case SUB:
			case MULT:
			case DIV:
			case RECIP:
			case COMPL:
			case AND:
			case OR:
			case XOR:
			case TEST:
			case CMP:
			case LSHIFT:
			case RSHIFT:
			case ARSHIFT:
			case LROTATE:
			case RROTATE:
			case IN:
			case OUT:
			case PACK:
			case PACK64:
			case UNPACK:
			case UNPACK64:
			case CAS:
			case ENDIAN:
			case SAVE:
			case RESTORE:
			case READONLY:
				{
				setState(159);
				instruction();
				}
				break;
			case DCI:
			case DCF:
			case DCA:
			case DCB:
			case DCC:
			case DCW:
			case DCS:
			case ORG:
			case LINE:
			case LINE_BEGIN:
			case LINE_END:
			case BLOCK_BEGIN:
			case BLOCK_END:
				{
				setState(160);
				directive();
				}
				break;
			case NL:
				break;
			default:
				break;
			}
			setState(163);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelDefContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(CPUSim64Parser.IDENT, 0); }
		public LabelDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).enterLabelDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPUSim64Listener ) ((CPUSim64Listener)listener).exitLabelDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPUSim64Visitor ) return ((CPUSim64Visitor<? extends T>)visitor).visitLabelDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelDefContext labelDef() throws RecognitionException {
		LabelDefContext _localctx = new LabelDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_labelDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(IDENT);
			setState(166);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
